[gd_scene load_steps=7 format=3 uid="uid://bt1y065fsqata"]

[ext_resource type="Script" path="res://Scenes/monk.gd" id="1_7ssne"]
[ext_resource type="AudioStream" uid="uid://2di2ca7c78pe" path="res://Assets/Sounds/deep-talk1.wav" id="2_8eh6x"]
[ext_resource type="PackedScene" uid="uid://cgjr3f2opl8lu" path="res://Scenes/Ui/monk_1_quests.tscn" id="3_qd8a3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v40cy"]
radius = 6.0
height = 16.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1xocx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbf0q"]
radius = 11.0

[node name="Monk" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 11
motion_mode = 1
script = ExtResource("1_7ssne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v40cy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.690196, 0.556863, 1)
position = Vector2(1.78814e-07, 0)
scale = Vector2(10, 16)
texture = SubResource("PlaceholderTexture2D_1xocx")

[node name="interactArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="interactShape" type="CollisionShape2D" parent="interactArea"]
shape = SubResource("CircleShape2D_rbf0q")

[node name="interactHint" type="Label" parent="."]
visible = false
offset_left = -17.0
offset_top = -20.0
offset_right = 52.0
offset_bottom = 3.0
scale = Vector2(0.5, 0.5)
text = "Press \"E\""

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -9)
stream = ExtResource("2_8eh6x")
volume_db = -15.471
bus = &"sfx"
area_mask = 3

[node name="Monk1Quests" parent="." instance=ExtResource("3_qd8a3")]
offset_top = -28.0
offset_bottom = -28.0

[connection signal="area_entered" from="interactArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="interactArea" to="." method="_on_interact_area_area_exited"]
